# pdfinfo

./: .gitignore  README.md  pdfinfo.opam
lib/: jbuild  pdfinfo.ml  pdfinfo.mli
